# halide-project-template

./: .gitignore  CMakeLists.txt  adb_run_on_device.sh  build_android_full.sh  build_android_lite.sh  build_full.sh  build_lite.sh  build_x86_full.sh  build_x86_lite.sh  makefile
src/: CMakeLists.txt  test.cpp  test2.cpp
src/gaussian_blur/: CMakeLists.txt  halide_gaussian_blur_generator.cpp  halide_gaussian_blur_wrapper.cpp  halide_gaussian_blur_wrapper.h
src/utils/: CMakeLists.txt  timer.cpp  timer.h
